Fix memory leaks in xattr.c. Fix for reading empty values in linux xattrs. Start unit testing linux xattrs.
Change-Id: I63a04d6d33db970715dc526c1a36be4b3482dbdb

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -34,6 +34,7 @@ SRCS = \
 	client/test_auth.c \
 	client/test_find.c \
 	client/test_restore.c \
+	client/test_xattr.c \
 	server/monitor/test_browse.c \
 	server/monitor/test_cstat.c \
 	server/protocol1/test_bedup.c \
