Start unit tests for json_output.c.
Change-Id: Ica8e2417a2a59d3dcdb493d29d64743c0c4c2bb3

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -75,6 +75,7 @@ SUBDIROBJS = \
 		client/main.o \
 		client/monitor/json_input.o \
 		client/monitor/lline.o \
+		client/monitor/sel.o \
 		client/monitor/status_client_ncurses.o \
 		client/monitor.o \
 		client/protocol1/backup_phase2.o \
