More json tests.
Change-Id: I7fcbf1c11d1a2d27432b754544bdd54b6e86a89b

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -5,6 +5,7 @@ CFLAGS+=-Wall -g -fprofile-arcs -ftest-coverage -x c++
 SRCS = \
 	builders/build_attribs.c \
 	builders/build_asfd_mock.c \
+	builders/build_clientconfdir.c \
 	builders/build_file.c \
 	builders/build_paths.c \
 	builders/protocol2/build_blist.c \
