Make bad regexes produce error messages. Make bad restore regexes produce a message on the client side. Bug fix to make bad strlist regexes not match everything.
Change-Id: I2ef056a1a1fd35df59f441b48f37052712d0df64

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -55,6 +55,7 @@ SRCS = \
 	server/test_list.c \
 	server/test_manio.c \
 	server/test_resume.c \
+	server/test_restore.c \
 	server/test_sdirs.c \
 
 BURP_SRCS = \
