Client protocol2 phase2 sends CMD_INTERRUPT when file cannot be opened.
Change-Id: I09c2d959ee711733ad4724bcac6f5a57410451bf

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -1,5 +1,5 @@
 
-LIBS = -lcheck -lpthread -lm -lssl -lcrypto -lrt -lacl -lcrypt
+LIBS = -lcheck -lpthread -lm -lssl -lcrypto -lrt -lacl -lcrypt -lduma
 CFLAGS+=-Wall -g -fprofile-arcs -ftest-coverage -x c++
 
 SRCS = \
