Revert "Client protocol2 phase2 sends CMD_INTERRUPT when file cannot be opened."
This reverts commit 5c8e1ea894798e17e7229a1dcaf1aeac01eff45e.

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -1,5 +1,5 @@
 
-LIBS = -lcheck -lpthread -lm -lssl -lcrypto -lrt -lacl -lcrypt -lduma
+LIBS = -lcheck -lpthread -lm -lssl -lcrypto -lrt -lacl -lcrypt
 CFLAGS+=-Wall -g -fprofile-arcs -ftest-coverage -x c++
 
 SRCS = \
