Start tests for champ_server.
Change-Id: Ia543aade991f428e2e76bdd4663218c8dc886dd3

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -90,6 +90,7 @@ CLIENT_OBJS = \
 	$(OBJDIR)/regexp.o \
 	$(OBJDIR)/run_script.o \
 	$(OBJDIR)/sbuf.o \
+	$(OBJDIR)/server/protocol2/champ_chooser/incoming.o \
 	$(OBJDIR)/slist.o \
 	$(OBJDIR)/ssl.o \
 	$(OBJDIR)/strlist.o \
