autotools: remove unused gettext support
This fixes an error when running autoreconf without
having gettext installed:

configure.ac:225: error: possibly undefined macro: AM_GNU_GETTEXT
      If this token and others are legitimate, please use
m4_pattern_allow.
      See the Autoconf documentation.
autoreconf: /usr/local/Cellar/autoconf/2.69/bin/autoconf failed with
exit status: 1

This looks like a large change, but the churn is mostly in generated
files.

--- a/Makefile.in
+++ b/Makefile.in
@@ -67,12 +67,12 @@ burp: Makefile
 
 #-------------------------------------------------------------------------
 
-autoconf/aclocal.m4: autoconf/configure.in autoconf/burp-macros/* autoconf/gettext-macros/* autoconf/libtool/*
+autoconf/aclocal.m4: autoconf/configure.in autoconf/burp-macros/* autoconf/libtool/*
 
 #  Note, the following is needed in the above if ever any new macro is added.
 #   However, at the current time, the -I libtool causes the autoconf/aclocal.m4
 #   get messed up, so this is commented out
-#	cd autoconf && aclocal -I burp-macros -I gettext-macros -I libtool
+#	cd autoconf && aclocal -I burp-macros -I libtool
 
 configure: autoconf/configure.in autoconf/aclocal.m4 autoconf/acconfig.h autoconf/config.h.in
 	cd $(srcdir);
