--- a/config.h.in
+++ b/config.h.in
@@ -1,4 +1,4 @@
-/* config.h.in.  Generated from configure.in by autoheader.  */
+/* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Define to 1 if the `closedir' function returns void instead of `int'. */
 #undef CLOSEDIR_VOID
@@ -10,10 +10,6 @@
 
 /* Define to 1 if using `alloca.c'. */
 #undef C_ALLOCA
-
-/* Define to 1 if translation of program messages to the user's native
-   language is requested. */
-#undef ENABLE_NLS
 
 /* Define to use AIX3 statfs to get filesystem type */
 #undef FSTYPE_AIX_STATFS
@@ -70,14 +66,6 @@
 /* siganls type is: 4.2bsd */
 #undef HAVE_BSD_SIGNALS
 
-/* Define to 1 if you have the MacOS X function CFLocaleCopyCurrent in the
-   CoreFoundation framework. */
-#undef HAVE_CFLOCALECOPYCURRENT
-
-/* Define to 1 if you have the MacOS X function CFPreferencesCopyAppValue in
-   the CoreFoundation framework. */
-#undef HAVE_CFPREFERENCESCOPYAPPVALUE
-
 /* Define to 1 if you have the `chflags' function. */
 #undef HAVE_CHFLAGS
 
@@ -95,10 +83,6 @@
 
 /* OS is DARWIN */
 #undef HAVE_DARWIN_OS
-
-/* Define if the GNU dcgettext() function is already present or preinstalled.
-   */
-#undef HAVE_DCGETTEXT
 
 /* Define to 1 if you have the declaration of `tzname', and to 0 if you don't.
    */
@@ -168,9 +152,6 @@
 /* Define to 1 if you have the 'futimesat' function. */
 #undef HAVE_FUTIMESAT
 
-/* Define to 1 if you have the 'lutimes' function. */
-#undef HAVE_LUTIMES
-
 /* Define if you have GCC */
 #undef HAVE_GCC
 
@@ -198,9 +179,6 @@
 /* Define to 1 if you have the `getpid' function. */
 #undef HAVE_GETPID
 
-/* Define if the GNU gettext() function is already present or preinstalled. */
-#undef HAVE_GETTEXT
-
 /* Define to 1 if you have the `gettimeofday' function. */
 #undef HAVE_GETTIMEOFDAY
 
@@ -212,9 +190,6 @@
 
 /* OS is HPUX */
 #undef HAVE_HPUX_OS
-
-/* Define if you have the iconv() function and it works. */
-#undef HAVE_ICONV
 
 /* Define to 1 if you have the `inet_ntop' function. */
 #undef HAVE_INET_NTOP
@@ -308,6 +283,9 @@
 
 /* Define to 1 if you have the 'lsetxattr' function. */
 #undef HAVE_LSETXATTR
+
+/* Define to 1 if you have the `lutimes' function. */
+#undef HAVE_LUTIMES
 
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
@@ -601,8 +579,7 @@
 /* LOCALEDIR */
 #undef LOCALEDIR
 
-/* Define to the sub-directory in which libtool stores uninstalled libraries.
-   */
+/* Define to the sub-directory where libtool stores uninstalled libraries. */
 #undef LT_OBJDIR
 
 /* Define to 1 if `major', `minor', and `makedev' are declared in <mkdev.h>.
