autotools: ignore generated config.h.in

--- a/configure.ac
+++ b/configure.ac
@@ -12,8 +12,8 @@ cd ${BUILD_DIR}
 AC_SUBST(BUILD_DIR)
 AC_SUBST(TOP_DIR)
 AC_USE_SYSTEM_EXTENSIONS
-AC_CONFIG_AUX_DIR(autoconf)
-AC_CONFIG_HEADERS(src/config.h:config.h.in)
+AC_CONFIG_AUX_DIR([autoconf])
+AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
 dnl minimal Win32 stuff for "make clean"
