--- a/autoconf/Make.common2.in
+++ b/autoconf/Make.common2.in
@@ -23,10 +23,10 @@ WIN32LIBS = $(@WIN32@)
 # inference rules
 .c.o:
 #       @echo "Compiling $<"
-	$(ECHO_CMD)$(CXX) $(DEFS) $(DEBUG) -c $(WCFLAGS) $(CPPFLAGS) -I$(srcdir) -I$(basedir) $(DINCLUDE) $(CFLAGS) $<
+	$(ECHO_CMD)$(CXX) $(DEBUG) -c $(WCFLAGS) $(CPPFLAGS) -I$(srcdir) -I$(basedir) $(CFLAGS) $<
 .c.lo:
 #       @echo "Compiling $<"
-	$(ECHO_CMD)$(LIBTOOL_COMPILE) $(CXX) $(DEFS) $(DEBUG) -c $(WCFLAGS) $(CPPFLAGS) -I$(srcdir) -I$(basedir) $(DINCLUDE) $(CFLAGS) $<
+	$(ECHO_CMD)$(LIBTOOL_COMPILE) $(CXX) $(DEBUG) -c $(WCFLAGS) $(CPPFLAGS) -I$(srcdir) -I$(basedir) $(CFLAGS) $<
 #-------------------------------------------------------------------------
 
 Makefile: $(srcdir)/Makefile.in $(topdir)/config.status
@@ -67,7 +67,7 @@ uninstall:
 # `semi'-automatic since dependencies are generated at distribution time.
 
 depend:
-	@$(CXX) -S -M $(CPPFLAGS) $(XINC) -I$(srcdir) -I$(basedir) $(SQL_INC) *.c >> Makefile
+	@$(CXX) -S -M $(CPPFLAGS) -I$(srcdir) -I$(basedir) $(SQL_INC) *.c >> Makefile
 	@if ! test -f Makefile ; then \
 	  echo " ===== Something went wrong in make depend ====="; \
 	fi
