autotools: convert project to Automake
A lot of churn, but most of it is deletions.

Stuff that works:
- It builds, in and out-of-tree
- make dist / make distcheck works
  I compared the tarballs before and after,
  and they're as good as identical

What I probably broke and will fix next:
- Static executables
- Win32
- Tests

--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,31 @@
 *~
 *.swp
 *.swo
-autoconf/Make.common
-autoconf/Make.common2
-autoconf/ltmain.sh
+.deps/
+/*.tar.bz2
+/*.tar.gz
+.dirstamp
+/aclocal.m4
+/autoconf/Make.common
+/autoconf/Make.common2
+/autoconf/compile
+/autoconf/config.*
+/autoconf/depcomp
+/autoconf/install-sh
+/autoconf/ltmain.sh
+/autoconf/missing
+/autoconf/mkinstalldirs
+/autom4te.cache
+/configure
+/src/server/protocol1/vss_strip
+/src/stamp-h1
+Makefile
+Makefile.in
+config.h.in
 config.log
 config.out
 config.status
-config.h.in
 libtool
 src/bedup
 src/burp
 src/config.h
-/autom4te.cache
-/configure
-/aclocal.m4
-Makefile
-/src/server/protocol1/vss_strip
