Add  openssl include path to CPPFLAGS
Fixes building with openssl from homebrew

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -156,4 +156,7 @@ burp_LDADD = \
 	$(RSYNC_LIBS) \
 	$(ZLIBS)
 
-burp_CPPFLAGS = $(AM_CPPFLAGS) -DSYSCONFDIR=\"$(sysconfdir)\"
+burp_CPPFLAGS = \
+	$(AM_CPPFLAGS) \
+	-DSYSCONFDIR=\"$(sysconfdir)\" \
+	$(OPENSSL_INC)
